syntax = "proto3";

package echo;
option go_package = "foxygo.at/jig/pb/echo";
import "google/api/annotations.proto";

// Echo service.
service EchoService {
  // Hello greets.
  rpc Hello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = { post:"/api/echo/hello" body:"*" };
  };
  // HelloClientStream greets everyone at once.
  rpc HelloClientStream (stream HelloRequest) returns (HelloResponse) {
    option (google.api.http) = { post:"/api/echo/clientstream" body:"*" };
  }
  // HelloServerStream greets repeatedly.
  rpc HelloServerStream (HelloRequest) returns (stream HelloResponse) {
    option (google.api.http) = { post:"/api/echo/serverstream" body:"*" };
  };
  // HelloBiDiStream greets everyone individually.
  rpc HelloBiDiStream (stream HelloRequest) returns (stream HelloResponse) {
    option (google.api.http) = { post:"/api/echo/bidistream" body:"*" };
  };
}

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string response = 1;
}
